[package]
name = "bitcoincore-zmq"
version = "0.1.0"
edition = "2021"
authors = ["dev7ba <dev7ba@protonmail.com>"]
description = "A rust library to listen zmq sequence msgs from bitcoin core"
keywords = ["bitcoin", "mempool","zmq"]
categories = ["cryptography::cryptocurrencies"]
license = "MIT OR Apache-2.0"
repository= "https://github.com/dev7ba/bitcoincore-zmq"
readme="README.md"

[dependencies]
hex = "0.4.3"
url = { version="2.3.1"}
zmq = "0.10.0"
thiserror = "1.0.39"
anyhow = "1.0.75"
ctrlc = "3.4.1"
bitcoincore-rpc = "0.18.0"
reqwest = { version = "0.11", features = ["blocking"] }
bitcoin = "0.31.0"
bitcoincore-zmqsequence= {path = "../bitcoincore-zmqsequence-master", features=["check_node"] }
# bitcoincore-zmqsequence= {version = "0.1", features=["check_node"] }
